<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:columnCount="2"
        tools:ignore="MissingConstraints">

        <!-- Card 1: DEIIT -->
        <androidx.cardview.widget.CardView
            android:id="@+id/DEIIT"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
                <TextView
                    style="@style/DashboardTextView"
                    android:text="@string/deiit"/>
        </androidx.cardview.widget.CardView>

        <!-- Card 2: Map -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Map"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/DashboardCardView">

            <TextView
                style="@style/DashboardTextView"
                android:text="@string/map" />
        </androidx.cardview.widget.CardView>

        <!-- Card 3: UGR -->
        <androidx.cardview.widget.CardView
            android:id="@+id/UGR"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/ugr" />
        </androidx.cardview.widget.CardView>

        <!-- Card 4: ETSIIT -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ETSIIT"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/etsiit" />
        </androidx.cardview.widget.CardView>

        <!-- Card 5: Syllabus -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Syllabus"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/syllabus" />
        </androidx.cardview.widget.CardView>

        <!-- Card 6: Schedules -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Schedules"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/schedules" />
        </androidx.cardview.widget.CardView>

        <!-- Card 7: Clubs -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Clubs"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/clubs" />
        </androidx.cardview.widget.CardView>

        <!-- Card 8: Services -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Services"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/services" />
        </androidx.cardview.widget.CardView>

        <!-- Card 9: Community -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Community"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/community" />
        </androidx.cardview.widget.CardView>

        <!-- Card 10: Contact -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Contact"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/contact" />
        </androidx.cardview.widget.CardView>

        <!-- Card 11: University smart card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/TUI"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/tui" />
        </androidx.cardview.widget.CardView>

        <!-- Card 12: Mails -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Mails"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/mails" />
        </androidx.cardview.widget.CardView>

        <!-- Card 13: Bus pass -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Bus"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/bus" />
        </androidx.cardview.widget.CardView>

        <!-- Card 14: Contests and prizes -->
        <androidx.cardview.widget.CardView
            android:id="@+id/Contests_and_prizes"
            style="@style/DashboardCardView"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            >
            <TextView
                style="@style/DashboardTextView"
                android:text="@string/contests_and_prizes" />
        </androidx.cardview.widget.CardView>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>